--- a/assets/pages/contato.html
+++ b/assets/pages/contato.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sustentable Growth</title>
+    <title>Sustentable Growth — Contato</title>
     <link
       rel="shortcut icon"
       href="../img/faviconLogo.ico"
@@ -17,221 +17,208 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
     />
   </head>
   <body>
-    <div class="container-fluid">
-      <header
-        class="d-flex flex-wrap justify-content-between align-items-center py-3 border-bottom"
-      >
-        <a
-          href="index.html"
-          class="d-flex align-items-center mb-2 mb-md-0 text-dark text-decoration-none"
-        >
-          <img
-            src="../img/logo.png"
-            alt="logo Sustentable growth"
-            class="logo-header"
-          />
-        </a>
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a href="../../index.html" class="nav-link" aria-current="page"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="categorias.html" class="nav-link">Categorias</a>
-          </li>
-          <li class="nav-item">
-            <a href="produtos.html" class="nav-link">Produtos</a>
-          </li>
-          <li class="nav-item">
-            <a href="contato.html" class="nav-link active">Contato</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link"> <i class="bi bi-cart-fill"></i> </a>
-          </li>
-        </ul>
-      </header>
-    </div>
-
-    <div class="container my-5 text-center">
-      <h2>Sobre Nossos Produtos Sustentáveis</h2>
-      <br />
-      <p class="lead">
-        Na Sustentable Growth, a sua privacidade é fundamental. Coletamos apenas
-        os dados necessários para que você tenha uma experiência de compra
-        completa e segura, como nome, e-mail, telefone, endereço e informações
-        de pagamento. Esses dados são utilizados exclusivamente para processar
-        pedidos, realizar entregas, oferecer suporte ao cliente e, quando
-        autorizado, enviar novidades, promoções e conteúdos relevantes. Para
-        garantir a operação do e-commerce, podemos compartilhar informações com
-        parceiros de logística, meios de pagamento e fornecedores de serviços
-        essenciais, sempre de forma restrita e segura. Não vendemos ou
-        comercializamos seus dados pessoais em nenhuma circunstância. Adotamos
-        medidas de segurança técnicas e administrativas para proteger suas
-        informações contra acessos não autorizados, alterações indevidas ou uso
-        indevido. Conforme a Lei Geral de Proteção de Dados (LGPD), você tem o
-        direito de solicitar a atualização, exclusão ou acesso aos seus dados
-        pessoais a qualquer momento. Em caso de dúvidas, entre em contato
-        conosco pelo e-mail: contato@[sualoja].com.
-      </p>
-    </div>
-
-    <div
-      class="d-flex justify-content-center align-items-center"
-      style="min-height: 80vh"
-    >
-      <div class="col-12 col-md-6">
-        <div class="mb-3">
-          <label for="NomeForm" class="form-label">Nome completo</label>
-          <input
-            type="text"
-            class="form-control"
-            id="NomeForm"
-            placeholder="Escreva seu nome aqui"
-          />
-        </div>
-
-        <div class="mb-3">
-          <label for="telefone" class="form-label">Tel.</label>
-          <input
-            type="text"
-            class="form-control"
-            id="telefone"
-            placeholder="(11) 940028922"
-          />
-        </div>
-
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="seuemail@email.com"
-          />
-        </div>
-
-        <div class="mb-3">
-          <label for="Assunto" class="form-label">Assunto</label>
-          <input
-            type="text"
-            class="form-control"
-            id="Assunto"
-            placeholder="Sobre o que gostaria de falar ?"
-          />
-        </div>
-
-        <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label"
-            >Mensagem</label
+    <header class="border-bottom">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a
+            class="navbar-brand"
+            href="../../index.html"
+            aria-label="Página inicial"
           >
-          <textarea
-            class="form-control"
-            id="exampleFormControlTextarea1"
-            rows="3"
-          ></textarea>
+            <img
+              src="../img/logo.png"
+              alt="Logo Sustentable Growth"
+              class="logo-header"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Alternar navegação"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a href="../../index.html" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="categorias.html" class="nav-link">Categorias</a>
+              </li>
+              <li class="nav-item">
+                <a href="produtos.html" class="nav-link">Produtos</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  href="contato.html"
+                  class="nav-link active"
+                  aria-current="page"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link" aria-label="Carrinho"
+                  ><i class="bi bi-cart-fill"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <button type="button" class="btn btn-primary">Enviar</button>
-      </div>
-    </div>
+      </nav>
+    </header>
 
-    <div class="container">
-      <footer class="py-5">
-        <div class="row">
-          <div class="col-6 col-md-2 mb-3">
-            <h5>Redes sociais</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >Instagram</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >Linkedin</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Orkut</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">TikTok</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-6 col-md-2 mb-3">
-            <h5>Contato</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >(11) 940028922</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >(11) 999999999</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >example@email.com</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-5 offset-md-1 mb-3">
-            <form>
-              <h5>Políticas da Sustentable Growth</h5>
-              <p>
-                Na Sustentable Growth, seus dados são usados apenas para
-                processar pedidos, oferecer uma boa experiência de compra e
-                enviar novidades quando autorizado. Nunca vendemos suas
-                informações e seguimos a LGPD para garantir sua segurança e
-                privacidade.
-              </p>
-            </form>
-          </div>
+    <main>
+      <div class="container my-5 text-center">
+        <h2>Sobre Nossos Produtos Sustentáveis</h2>
+        <p class="lead mt-3">
+          Na Sustentable Growth, a sua privacidade é fundamental. Coletamos
+          apenas os dados necessários para sua experiência de compra. Seguimos a
+          LGPD e nunca comercializamos seus dados. Em caso de dúvidas, escreva
+          para: contato@sustenablegrowth.com.
+        </p>
+      </div>
+
+      <div
+        class="d-flex justify-content-center align-items-center"
+        style="min-height: 70vh"
+      >
+        <div class="col-12 col-md-6">
+          <form>
+            <div class="mb-3">
+              <label for="NomeForm" class="form-label">Nome completo</label>
+              <input
+                type="text"
+                class="form-control"
+                id="NomeForm"
+                placeholder="Escreva seu nome aqui"
+                required
+              />
+            </div>
+
+            <div class="mb-3">
+              <label for="telefone" class="form-label">Telefone</label>
+              <input
+                type="tel"
+                class="form-control"
+                id="telefone"
+                placeholder="(11) 94002-8922"
+                required
+              />
+            </div>
+
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                placeholder="seuemail@email.com"
+                required
+              />
+            </div>
+
+            <div class="mb-3">
+              <label for="Assunto" class="form-label">Assunto</label>
+              <input
+                type="text"
+                class="form-control"
+                id="Assunto"
+                placeholder="Sobre o que gostaria de falar?"
+                required
+              />
+            </div>
+
+            <div class="mb-3">
+              <label for="mensagem" class="form-label">Mensagem</label>
+              <textarea
+                class="form-control"
+                id="mensagem"
+                rows="4"
+                placeholder="Escreva sua mensagem"
+                required
+              ></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
         </div>
-        <div
-          class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
-        >
-          <p>© 2025 Company, Inc. All rights reserved.</p>
-          <ul class="list-unstyled d-flex">
-            <li class="ms-3">
-              <a class="link-body-emphasis" href="#" aria-label="Instagram"
-                ><svg class="bi" width="24" height="24">
-                  <use xlink:href="#instagram"></use></svg
-              ></a>
+      </div>
+    </main>
+
+    <footer class="container py-5">
+      <div class="row">
+        <div class="col-6 col-md-2 mb-3">
+          <h5>Redes sociais</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Instagram</a>
             </li>
-            <li class="ms-3">
-              <a class="link-body-emphasis" href="#" aria-label="Facebook"
-                ><svg class="bi" width="24" height="24" aria-hidden="true">
-                  <use xlink:href="#facebook"></use></svg
-              ></a>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">LinkedIn</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">TikTok</a>
             </li>
           </ul>
         </div>
-      </footer>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
-      integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
+        <div class="col-6 col-md-2 mb-3">
+          <h5>Contato</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary"
+                >(11) 94002-8922</a
+              >
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary"
+                >(11) 99999-9999</a
+              >
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary"
+                >example@email.com</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-5 offset-md-1 mb-3">
+          <h5>Políticas da Sustentable Growth</h5>
+          <p class="mb-0">
+            Na Sustentable Growth, seus dados são usados apenas para processar
+            pedidos, oferecer uma boa experiência de compra e enviar novidades
+            quando autorizado. Nunca vendemos suas informações e seguimos a
+            LGPD.
+          </p>
+        </div>
+      </div>
+      <div
+        class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
+      >
+        <p class="mb-0">
+          © 2025 Sustentable Growth. Todos os direitos reservados.
+        </p>
+        <ul class="list-unstyled d-flex">
+          <li class="ms-3">
+            <a class="link-body-emphasis" href="#" aria-label="Instagram"
+              ><i class="bi bi-instagram"></i
+            ></a>
+          </li>
+          <li class="ms-3">
+            <a class="link-body-emphasis" href="#" aria-label="Facebook"
+              ><i class="bi bi-facebook"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
