--- a/assets/pages/produtos.html
+++ b/assets/pages/produtos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sustentable Growth</title>
+    <title>Sustentable Growth — Produto</title>
     <link
       rel="shortcut icon"
       href="../img/faviconLogo.ico"
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/produtos.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -20,47 +20,68 @@
     />
   </head>
   <body>
-    <div class="container-fluid">
-      <header
-        class="d-flex flex-wrap justify-content-between align-items-center py-3 border-bottom"
-      >
-        <a
-          href="index.html"
-          class="d-flex align-items-center mb-2 mb-md-0 text-dark text-decoration-none"
-        >
-          <img
-            src="../img/logo.png"
-            alt="logo Sustentable growth"
-            class="logo-header"
-          />
-        </a>
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a href="../../index.html" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="categorias.html" class="nav-link">Categorias</a>
-          </li>
-          <li class="nav-item">
-            <a href="produtos.html" class="nav-link active">Produtos</a>
-          </li>
-          <li class="nav-item">
-            <a href="contato.html" class="nav-link">Contato</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link"><i class="bi bi-cart-fill"></i></a>
-          </li>
-        </ul>
-      </header>
-    </div>
+    <header class="border-bottom">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a
+            class="navbar-brand"
+            href="../../index.html"
+            aria-label="Página inicial"
+          >
+            <img
+              src="../img/logo.png"
+              alt="Logo Sustentable Growth"
+              class="logo-header"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Alternar navegação"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a href="../../index.html" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="categorias.html" class="nav-link">Categorias</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  href="produtos.html"
+                  class="nav-link active"
+                  aria-current="page"
+                  >Produtos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="contato.html" class="nav-link">Contato</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link" aria-label="Carrinho"
+                  ><i class="bi bi-cart-fill"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-    <div class="container my-5">
+    <main class="container my-5">
       <div class="row g-5">
         <div class="col-md-6">
           <img
             src="../img/sabonete.jpg"
             class="img-fluid rounded shadow-sm mb-3"
-            alt="Produto Sustentável"
+            alt="Kit Cosmético Natural"
           />
         </div>
 
@@ -70,15 +91,15 @@
           <h3 class="text-success">R$ 89,90</h3>
           <p>
             Este kit inclui sabonete artesanal, shampoo sólido e hidratante
-            natural, todos produzidos com ingredientes orgânicos e embalagens
+            natural, todos com ingredientes orgânicos e embalagens
             biodegradáveis.
           </p>
-          <ul>
+          <ul class="mb-4">
             <li>🌱 100% vegano</li>
             <li>♻️ Embalagem reciclável</li>
             <li>✨ Livre de parabenos e sulfatos</li>
           </ul>
-          <div class="d-flex gap-3 mt-4">
+          <div class="d-flex gap-3 mt-2">
             <button class="btn btn-success">
               <i class="bi bi-cart-plus"></i> Adicionar ao Carrinho
             </button>
@@ -105,7 +126,7 @@
             <img
               src="../img/perfume.jpg"
               class="card-img-top"
-              alt="Produto relacionado"
+              alt="Perfume Natural"
             />
             <div class="card-body text-center">
               <h6 class="card-title">Perfume Natural</h6>
@@ -119,7 +140,7 @@
             <img
               src="../img/essencia.jpg"
               class="card-img-top"
-              alt="Produto relacionado"
+              alt="Essência Aromática"
             />
             <div class="card-body text-center">
               <h6 class="card-title">Essência</h6>
@@ -133,7 +154,7 @@
             <img
               src="../img/escova.jpg"
               class="card-img-top"
-              alt="Produto relacionado"
+              alt="Escova de bambu"
             />
             <div class="card-body text-center">
               <h6 class="card-title">Escova de bambu</h6>
@@ -147,7 +168,7 @@
             <img
               src="../img/camisaBege.jpg"
               class="card-img-top"
-              alt="Produto relacionado"
+              alt="Camisa de linho"
             />
             <div class="card-body text-center">
               <h6 class="card-title">Camisa de linho</h6>
@@ -157,86 +178,75 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
 
-    <div class="container">
-      <footer class="py-5">
-        <div class="row">
-          <div class="col-6 col-md-2 mb-3">
-            <h5>Redes sociais</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >Instagram</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >Linkedin</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Orkut</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">TikTok</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-6 col-md-2 mb-3">
-            <h5>Contato</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >(11) 940028922</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >(11) 999999999</a
-                >
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
-                  >example@email.com</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-5 offset-md-1 mb-3">
-            <form>
-              <h5>Políticas da Sustentable Growth</h5>
-              <p>
-                Na Sustentable Growth, seus dados são usados apenas para
-                processar pedidos, oferecer uma boa experiência de compra e
-                enviar novidades quando autorizado. Nunca vendemos suas
-                informações e seguimos a LGPD para garantir sua segurança e
-                privacidade.
-              </p>
-            </form>
-          </div>
-        </div>
-        <div
-          class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
-        >
-          <p>© 2025 Company, Inc. All rights reserved.</p>
-          <ul class="list-unstyled d-flex">
-            <li class="ms-3">
-              <a class="link-body-emphasis" href="#" aria-label="Instagram"
-                ><svg class="bi" width="24" height="24">
-                  <use xlink:href="#instagram"></use></svg
-              ></a>
+    <footer class="container py-5">
+      <div class="row">
+        <div class="col-6 col-md-2 mb-3">
+          <h5>Redes sociais</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Instagram</a>
             </li>
-            <li class="ms-3">
-              <a class="link-body-emphasis" href="#" aria-label="Facebook"
-                ><svg class="bi" width="24" height="24" aria-hidden="true">
-                  <use xlink:href="#facebook"></use></svg
-              ></a>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">LinkedIn</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">TikTok</a>
             </li>
           </ul>
         </div>
-      </footer>
-    </div>
+        <div class="col-6 col-md-2 mb-3">
+          <h5>Contato</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary"
+                >(11) 94002-8922</a
+              >
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary"
+                >(11) 99999-9999</a
+              >
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary"
+                >example@email.com</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-5 offset-md-1 mb-3">
+          <h5>Políticas da Sustentable Growth</h5>
+          <p class="mb-0">
+            Na Sustentable Growth, seus dados são usados apenas para processar
+            pedidos, oferecer uma boa experiência de compra e enviar novidades
+            quando autorizado. Nunca vendemos suas informações e seguimos a
+            LGPD.
+          </p>
+        </div>
+      </div>
+      <div
+        class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
+      >
+        <p class="mb-0">
+          © 2025 Sustentable Growth. Todos os direitos reservados.
+        </p>
+        <ul class="list-unstyled d-flex">
+          <li class="ms-3">
+            <a class="link-body-emphasis" href="#" aria-label="Instagram"
+              ><i class="bi bi-instagram"></i
+            ></a>
+          </li>
+          <li class="ms-3">
+            <a class="link-body-emphasis" href="#" aria-label="Facebook"
+              ><i class="bi bi-facebook"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
