FIX: Estrtura do projeto

--- a/src/pages/categorias.html
+++ b/src/pages/categorias.html
@@ -6,7 +6,7 @@
     <title>Sustentable Growth — Categorias</title>
     <link
       rel="shortcut icon"
-      href="../img/faviconLogo.ico"
+      href="../assets/img/faviconLogo.ico"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../css/categorias.css" />
@@ -23,17 +23,14 @@
     <header class="border-bottom">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a
-            class="navbar-brand"
-            href="../../index.html"
-            aria-label="Página inicial"
-          >
+          <a class="navbar-brand" href="index.html" aria-label="Página inicial">
             <img
-              src="../img/logo.png"
+              src="../assets/img/logo.png"
               alt="Logo Sustentable Growth"
               class="logo-header"
             />
           </a>
+
           <button
             class="navbar-toggler"
             type="button"
@@ -45,27 +42,25 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
+
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a href="../../index.html" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="categorias.html"
-                  class="nav-link active"
-                  aria-current="page"
-                  >Categorias</a
+                <a class="nav-link" href="../../index.html" aria-current="page"
+                  >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a href="produtos.html" class="nav-link">Produtos</a>
+                <a class="nav-link active" href="categorias.html">Categorias</a>
               </li>
               <li class="nav-item">
-                <a href="contato.html" class="nav-link">Contato</a>
+                <a class="nav-link" href="produtos.html">Produtos</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" aria-label="Carrinho"
+                <a class="nav-link" href="contato.html">Contato</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" aria-label="Carrinho"
                   ><i class="bi bi-cart-fill"></i
                 ></a>
               </li>
@@ -306,7 +301,7 @@
               <div class="col-md-4" id="cosmeticos">
                 <div class="card h-100 shadow-sm">
                   <img
-                    src="../img/frasco.jpg"
+                    src="../assets/img/frasco.jpg"
                     class="card-img-top"
                     alt="Cosméticos Sustentáveis"
                   />
@@ -327,7 +322,7 @@
               <div class="col-md-4" id="utensilios">
                 <div class="card h-100 shadow-sm">
                   <img
-                    src="../img/escova categoria.jpg"
+                    src="../assets/img/escova categoria.jpg"
                     class="card-img-top"
                     alt="Utensílios Sustentáveis"
                   />
@@ -348,7 +343,7 @@
               <div class="col-md-4" id="moda">
                 <div class="card h-100 shadow-sm">
                   <img
-                    src="../img/camisa.jpg"
+                    src="../assets/img/camisa.jpg"
                     class="card-img-top"
                     alt="Moda Sustentável"
                   />
