--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sustentable Growth</title>
     <link
-      rel="shortcut icon"
-      href="assets/img/faviconLogo.ico"
+      rel="faviconLogo"
+      href="src/assets/img/faviconLogo.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -25,7 +25,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html" aria-label="Página inicial">
             <img
-              src="assets/img/logo.png"
+              src="src/assets/img/logo.png"
               alt="Logo Sustentable Growth"
               class="logo-header"
             />
@@ -51,17 +51,15 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="assets/pages/categorias.html"
+                <a class="nav-link" href="src/pages/categorias.html"
                   >Categorias</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="assets/pages/produtos.html"
-                  >Produtos</a
-                >
+                <a class="nav-link" href="src/pages/produtos.html">Produtos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="assets/pages/contato.html">Contato</a>
+                <a class="nav-link" href="src/pages/contato.html">Contato</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" aria-label="Carrinho"
@@ -101,7 +99,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="assets/img/perfume.jpg"
+              src="src/assets/img/perfume.jpg"
               alt="Imagem de frasco de perfume"
               class="d-block w-100"
             />
@@ -116,7 +114,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets/img/camisa.jpg"
+              src="src/assets/img/camisa.jpg"
               alt="Camiseta sustentável"
               class="d-block w-100"
             />
@@ -129,7 +127,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="assets/img/escova.jpg"
+              src="src/assets/img/escova.jpg"
               alt="Escova de bambu"
               class="d-block w-100"
             />
@@ -167,14 +165,14 @@
           <div class="col">
             <div class="card h-100 shadow-sm">
               <img
-                src="assets/img/camisa.jpg"
+                src="src/assets/img/camisa.jpg"
                 alt="Categoria Roupas Sustentáveis"
                 class="card-img-top"
               />
               <div class="card-body text-center">
                 <h3 class="h5 fw-bold">Roupas</h3>
                 <a
-                  href="assets/pages/categorias.html#moda"
+                  href="src/pages/categorias.html#moda"
                   class="btn btn-outline-success btn-sm"
                   >Ver itens</a
                 >
@@ -184,14 +182,14 @@
           <div class="col">
             <div class="card h-100 shadow-sm">
               <img
-                src="assets/img/frasco.jpg"
+                src="src/assets/img/frasco.jpg"
                 alt="Categoria Cosméticos Naturais"
                 class="card-img-top"
               />
               <div class="card-body text-center">
                 <h3 class="h5 fw-bold">Cosméticos</h3>
                 <a
-                  href="assets/pages/categorias.html#cosmeticos"
+                  href="src/pages/categorias.html#cosmeticos"
                   class="btn btn-outline-success btn-sm"
                   >Ver itens</a
                 >
@@ -201,14 +199,14 @@
           <div class="col">
             <div class="card h-100 shadow-sm">
               <img
-                src="assets/img/escova categoria.jpg"
+                src="src/assets/img/escova categoria.jpg"
                 alt="Categoria Higiene Sustentável"
                 class="card-img-top"
               />
               <div class="card-body text-center">
                 <h3 class="h5 fw-bold">Higiene</h3>
                 <a
-                  href="assets/pages/categorias.html#utensilios"
+                  href="src/pages/categorias.html#utencilios"
                   class="btn btn-outline-success btn-sm"
                   >Ver itens</a
                 >
